# tdci-analysis

./: .flake8  .gitignore  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: main.yml
doc/: conf.py  index.rst  tdci-a.rst
doc/_build/doctrees/: data_analysis.doctree  environment.pickle  help.doctree  index.doctree  installation.doctree  license.doctree  modules.doctree  readme.doctree  src.doctree  tdci-a.doctree
doc/_build/html/: .buildinfo  data_analysis.html  genindex.html  help.html  index.html  installation.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  src.html  tdci-a.html
doc/_build/html/_sources/: data_analysis.rst.txt  help.rst.txt  installation.md.txt  license.rst.txt  modules.rst.txt  readme.md.txt
src/tdcia/: __init__.py  input_output.py  statistical.py
src/tdcia/tests/: test_statistical.py
tdci-a/: input_output.py  main.py  numerical.py  transform.py
tests/: test_df.csv  test_numerical.py
