[metadata]
# replace with your username:
name = tdci-analyis-iulusoy
version = 0.0.1
author = Inga Ulusoy
author_email = inga.ulusoy@uni-heidelberg.de
description = TDCI data analysis package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
